<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>mc.gouv.xboot</groupId>
        <artifactId>xboot-spring-starter-parent</artifactId>
        <version>4.0.0-rc1</version>
    </parent>

    <properties>
        <java.version>11</java.version>
        <servicerest_client.version>2.2.15</servicerest_client.version>
        <tika.version>1.22</tika.version>
        <xcb-wlib.version>1.2.0</xcb-wlib.version>
    </properties>

    <groupId>mc.gouv.xaf</groupId>
    <artifactId>xaf</artifactId>
    <version>11.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

	<scm>
		<url>https://git.monaco-gouvernement.mc/libs/xaf.git</url>
		<connection>scm:git:git@git.monaco-gouvernement.mc:libs/xaf.git</connection>
		<developerConnection>scm:git:git@git.monaco-gouvernement.mc:libs/xaf.git</developerConnection>
	  <tag>xaf-11.0.0-SNAPSHOT</tag>
  </scm>


    <modules>
        <module>xaf-servlet</module>
        <module>xaf-back</module>
        <module>xaf-apiclient</module>
        <module>xaf-backweb</module>
        <module>xaf-shared</module>
        <module>xaf-back-denjs</module>
        <module>xaf-back-dsp</module>
        <module>xaf-backweb-denjs</module>
        <module>xaf-sup</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- CVE-2019-12415 -->
            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-app</artifactId>
                <version>${tika.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.cxf</groupId>
                        <artifactId>cxf-rt-rs-client</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>xerces</groupId>
                        <artifactId>xercesImpl</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-parsers</artifactId>
                <version>${tika.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.cxf</groupId>
                        <artifactId>cxf-rt-rs-client</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.poi</groupId>
                        <artifactId>poi-ooxml</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.poi</groupId>
                        <artifactId>poi</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>xerces</groupId>
                        <artifactId>xercesImpl</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-langdetect</artifactId>
                <version>${tika.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.cxf</groupId>
                        <artifactId>cxf-rt-rs-client</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>xerces</groupId>
                        <artifactId>xercesImpl</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- CVE-2019-12402 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.19</version>
            </dependency>

            <!-- CWE-300 -->
            <dependency>
                <groupId>org.jgroups</groupId>
                <artifactId>jgroups</artifactId>
                <version>4.1.1.Final</version>
            </dependency>

            <!-- CVE-2018-10237 -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>25.1-jre</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
